added main page

--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html class="has-background-dark">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Webcam</title>
-        <link href="./styles.css" rel="stylesheet">
+        <link rel="stylesheet" href="indexPage.css">
     </head>
 
     <body>
         <center>
-            <div>
-                <video id="video"></video>
-            </div>
-            <br/>
-            <button id="capture">Capture</button>
+            <h1 class="headerText">Prendre une photo !</h1>
         </center>
+        <button id="test">Test Button</button>
 
-        <script src="./webcam.js"></script>
+        <script src="./indexPage.js"></script>
     </body>
 </html>
