--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,14 @@
         <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Webcam</title>
-        <link rel="stylesheet" href="indexPage.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <center>
             <h1 class="headerText">Prendre une photo !</h1>
         </center>
-        <button id="test">Test Button</button>
+        <button id="begin">Commencer</button>
 
         <script src="./indexPage.js"></script>
     </body>
